2003-10-16  Pavel Roskin  <proski@gnu.org>

	* names.c: Merge ...
	* utilvfs.c: ... here.
	* names.h: Merge ...
	* utilvfs.h: ... here.
	* Makefile.am: Remove references to names.c and names.h.

	* xdirentry.h: Rename vfs_s_data to vfs_s_subclass.
	* cpio.c: Initialize only non-zero fields in vfs_s_subclass.
	* fish.c: Likewise.
	* ftpfs.c: Likewise.
	* tar.c: Likewise.

	* vfs.h: Rename commands for mc_ctl() and mc_setctl() to make it
	clear which function they are used with.
	* vfs.c (mc_ctl): Change last argument to (void*).
	(mc_set): Likewise.
	Adjust all dependencies.

	* xdirentry.h: Move system includes to the files that need them.

	* xdirentry.h: Fix typos in field names.

	* xdirentry.h: Cleanup unused or write-only fields.  Adjust all
	dependencies.

	* xdirentry.h: Remove magic numbers.  Move some constants ...
	* ftpfs.c: ... here.

2003-10-15  Pavel Roskin  <proski@gnu.org>

	* samba/lib/doscalls.c: Remove.  Remove all references to it.

2003-10-14  Pavel Roskin  <proski@gnu.org>

	* vfs.h: Remove all references to seekdir and telldir.  Adjust
	all dependencies.

2003-10-13  Pavel Roskin  <proski@gnu.org>

	* vfs.c (_vfs_add_noncurrent_stamps): Fix incorrect casts.

2003-10-12  Pavel Roskin  <proski@gnu.org>

	* extfs.c: Switch to self-registration.
	* mcfs.c: Likewise.
	* sfs.c: Likewise.
	* smbfs.c: Likewise.
	* undelfs.c: Likewise.
	* vfs.s (_vfs_add_noncurrent_stamps): Temporary disable code
	that uses vfs_extfs_ops.
	(vfs_file_is_smb): Remove.

	* local.c: Switch to self-registration.
	* vfs.c: Cache localfs class for the use in vfs_get_class().

2003-10-11  Pavel Roskin  <proski@gnu.org>

	* xdirentry.h: Remove all typedefs, there is no need to hide the
	fact that structures are structures.  Fix all dependencies.

	* vfs.h: Remove typedef vfs, it's too ambiguous.  Massive
	changes to use struct vfs_class instead.

	* vfs.c (vfs_setup_wd): Initialize current_vfs here, not
	globally.